deployment/k8s/spa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa-app
  labels:
    app: spa-app
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-app    # indicates which Pods (with which labeles) need be handled by this Deployment
  template:
    metadata:         # indicates the metadata that will be added to each Pod
      labels:
        app: spa-app
        group: db
    spec:
      containers:     # defines a running container inside the Pod
        - name: spa-app
          image: fleetmetrics-spa:latest
          ports:
            - containerPort: 8080   # which port of the container is exposed to the Pod
