deployment/k8s/spa-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-app
  labels: 
    group: db
spec:
  type: ClusterIP
  selector:             # indicates into which pods ClusterIP provides access
    app: spa-app
  ports:
    - port: 3000          # port exposed outside ClusterIP
      targetPort: 3000    # port exposed by Pod
