deployment/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.fleetmetrics.io
      http:
        paths:
          - path: /
            backend:  
              serviceName: adminer
              servicePort: 8080
    - host: demo.fleetmetrics.io
      http:
        paths: 
          - path: /api/
            backend:
              serviceName: gateway-app
              servicePort: 8081
          - path: /
            backend:
              serviceName: spa-app
              servicePort: 80
